# kernel_devicetree

./: .gitignore  BUILD.bazel  Makefile  NOTICE  OWNERS  README.md
bindings/: .gitignore  Makefile  chosen.txt  google,debug-kinfo.txt  msm_mhi_dev.txt  vendor-prefixes.yaml
camera-devicetree/: Kbuild  cape-camera-sensor-cdp.dts  cape-camera-sensor-mtp.dts  cape-camera-sensor-qrd.dts  cape-camera.dts  cape-camera.dtsi  cupid-sm8450-camera-sensor.dts  cupid-sm8450-camera-sensor.dtsi  diting-sm8475-camera-sensor.dts  diting-sm8475-camera-sensor.dtsi  diwali-camera-sensor-idp.dts  diwali-camera-sensor-idp.dtsi  diwali-camera-sensor-qrd.dts  diwali-camera-sensor-qrd.dtsi  diwali-camera.dts  diwali-camera.dtsi  ingres-sm8450-camera-sensor.dts  ingres-sm8450-camera-sensor.dtsi  loki-sm8450-camera-sensor.dts  loki-sm8450-camera-sensor.dtsi  mayfly-sm8475-camera-sensor.dts  mayfly-sm8475-camera-sensor.dtsi  mondrian-sm8475-camera-sensor.dts  mondrian-sm8475-camera-sensor.dtsi  parrot-camera.dtsi  thor-sm8450-camera-sensor.dts  thor-sm8450-camera-sensor.dtsi  thor-sm8475-camera-sensor.dts  thor-sm8475-camera-sensor.dtsi  unicorn-sm8450-camera-sensor.dts  unicorn-sm8475-camera-sensor.dts  unicorn-sm8475-camera-sensor.dtsi  waipio-camera-sensor-cdp.dts  waipio-camera-sensor-cdp.dtsi  waipio-camera-sensor-mtp.dts  waipio-camera-sensor-mtp.dtsi  waipio-camera-sensor-qrd.dts  waipio-camera-sensor-qrd.dtsi  waipio-camera.dts  waipio-camera.dtsi  (+8 more)
display-devicetree/: Kbuild
qcom/: Makefile  alioth-sm8250-overlay.dts  alioth-sm8250.dtsi  alor-atp-overlay.dtso  alor-atp.dtsi  (+3123 more)
(+799 files in other folders)
