load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
    name = "msm_dt",
    srcs = glob(
        [
            "Makefile",
            "qcom/Makefile",
            "qcom/**/*.dtsi",
            "qcom/**/*.dts",
	    "qcom/**/*.dtso",
            "bindings/**/*",
        ],
        exclude = [
            "**/.*",
            "**/.*/**",
            "**/*.bazel",
            "**/*.bzl",
        ],
    ) + ["//common:kernel_aarch64_sources"],
    visibility = ["//visibility:public"],
)
